--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,3 +1,15 @@
+<!--<style>
+  table {
+    color: #369;
+    font-family: Arial, Arial, Helvetica, sans-serif;
+    font-size: large;
+    border-collapse: collapse;
+  }
+
+  td {
+    border: 1px solid black;
+  }
+</style>-->
 <table>
   <tr>
     <td>First Name</td>
