--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@ h1{
     font-size: 250%;
 }
 
-table {
+/*table {
   color: #369;
   font-family: Arial, Arial, Helvetica, sans-serif;
   font-size: large;
@@ -14,3 +14,4 @@ table {
 td {
   border: 1px solid black;
 }
+*/
