--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div>
+  <!--Interpolation Examples-->
   <h1>{{pageHeader}}</h1>
 
   <h1>{{'Header = ' + pageHeader}}</h1>
@@ -7,9 +8,14 @@
 
   <h1>{{pageHeader ? pageHeader : 'No Header'}}</h1>
 
-  <img src="{{imagePath}}"/>
+  <img src="{{imagePath}}" />
 
   <h1>{{'Full Name = ' + getFullName()}}</h1>
 
   <my-employee></my-employee>
+
+  <!--Property Binding Examples-->
+
+  <img bind-src='imagePath' />
+  <img [src]='imagePath' />
 </div>
