--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -11,20 +11,28 @@
   }
 </style>-->
 <table>
-  <tr>
-    <td>First Name</td>
-    <td>{{firstName}}</td>
-  </tr>
-  <tr>
-    <td>Last Name</td>
-    <td>{{lastName}}</td>
-  </tr>
-  <tr>
-    <td>Gender</td>
-    <td>{{gender}}</td>
-  </tr>
-  <tr>
-    <td>Age</td>
-    <td>{{age}}</td>
-  </tr>
+  <thead>
+    <tr>
+      <th attr.colspan="{{columnSpan}}">Employee Details</th>
+      <th [attr.colspan]="columnSpan">Employee Details</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>First Name</td>
+      <td>{{firstName}}</td>
+    </tr>
+    <tr>
+      <td>Last Name</td>
+      <td>{{lastName}}</td>
+    </tr>
+    <tr>
+      <td>Gender</td>
+      <td>{{gender}}</td>
+    </tr>
+    <tr>
+      <td>Age</td>
+      <td>{{age}}</td>
+    </tr>
+  </tbody>
 </table>
