track by to improve ngFor performance ngFor Directives: index first last even odd

--- a/src/app/employee/employeeList.component.html
+++ b/src/app/employee/employeeList.component.html
@@ -1,25 +1,40 @@
 <table>
-    <thead>
-        <tr>
-            <th>Code</th>
-            <th>Name</th>
-            <th>Gender</th>
-            <th>Annual Salary</th>
-            <th>Date of Birth</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let employee of employees">
-            <td>{{employee.code}}</td>
-            <td>{{employee.name}}</td>
-            <td>{{employee.gender}}</td>
-            <td>{{employee.annualSalary}}</td>
-            <td>{{employee.dateOfBirth}}</td>
-        </tr>
-        <tr *ngIf="!employees || employees.length==0">
-            <td colspan="5">
-                No employees to display
-            </td>
-        </tr>
-    </tbody>
+  <thead>
+    <tr>
+      <th>Code</th>
+      <th>Name</th>
+      <th>Gender</th>
+      <th>Annual Salary</th>
+      <th>Date of Birth</th>
+      <th>Index</th>
+      <th>Is First</th>
+      <th>Is Last</th>
+      <th>Is Even</th>
+      <th>Is Odd</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let employee of employees;trackBy:trackByEmpCode;let i = index; let isFirst = first; let isLast = last; let isEven = even; ; let isOdd = odd">
+      <td>{{employee.code}}</td>
+      <td>{{employee.name}}</td>
+      <td>{{employee.gender}}</td>
+      <td>{{employee.annualSalary}}</td>
+      <td>{{employee.dateOfBirth}}</td>
+      <td>{{i}}</td>
+      <td>{{isFirst}}</td>
+      <td>{{isLast}}</td>
+      <td>{{isEven}}</td>
+      <td>{{isOdd}}</td>
+    </tr>
+    <tr *ngIf="!employees || employees.length==0">
+      <td colspan="5">
+        No employees to display
+      </td>
+    </tr>
+  </tbody>
 </table>
+<br/>
+<button (click)="getEmployees()">
+ Refresh Employees
+</button>
+
