--- a/src/app/employee/employeeList.component.html
+++ b/src/app/employee/employeeList.component.html
@@ -16,7 +16,7 @@
   <tbody>
     <tr *ngFor="let employee of employees;trackBy:trackByEmpCode;let i = index; let isFirst = first; let isLast = last; let isEven = even; ; let isOdd = odd">
       <td>{{employee.code | uppercase}}</td>
-      <td>{{employee.name}}</td>
+      <td>{{employee.name | employeeTitle:employee.gender}}</td>
       <td>{{employee.gender}}</td>
       <td>{{employee.annualSalary | currency: 'USD': true: '1.3-3'}}</td>
       <td>{{employee.dateOfBirth | date: 'fullDate'| uppercase}}</td>
