Components and Nested Components Component Input Properties - Passing data from container component to nested component

--- a/src/app/employee/employeeList.component.html
+++ b/src/app/employee/employeeList.component.html
@@ -1,3 +1,8 @@
+<employee-count [all]="getTotalEmployeesCount()"
+                [male]="getTotalMaleEmployeesCount()"
+                [female]="getTotalFemaleEmployeesCount()"></employee-count>
+<br/>
+
 <table>
   <thead>
     <tr>
