Component Output Properties - Used to pass data from nested component to container component

--- a/src/app/employee/employeeCount.component.html
+++ b/src/app/employee/employeeCount.component.html
@@ -1,10 +1,10 @@
 <span class="radioClass">Show : </span>
 
-<input type="radio" name="options" value="All" />
+<input type="radio" name="options" value="All" [(ngModel)] ="selectedRadioButtonValue" (change)="onRadioButtonSelectionChange()" />
 <span class="radioClass">{{'All(' + all + ')'}} </span>
 
-<input type="radio" name="options" value="Male" />
+<input type="radio" name="options" value="Male" [(ngModel)] ="selectedRadioButtonValue" (change)="onRadioButtonSelectionChange()" />
 <span class="radioClass">{{'Male(' + male + ')'}} </span>
 
-<input type="radio" name="options" value="Female" />
+<input type="radio" name="options" value="Female" [(ngModel)] ="selectedRadioButtonValue" (change)="onRadioButtonSelectionChange()" />
 <span class="radioClass">{{'Female(' + female + ')'}} </span>
