--- a/src/app/employee/employeeList.component.html
+++ b/src/app/employee/employeeList.component.html
@@ -1,8 +1,10 @@
 <employee-count [all]="getTotalEmployeesCount()"
                 [male]="getTotalMaleEmployeesCount()"
-                [female]="getTotalFemaleEmployeesCount()"></employee-count>
+                [female]="getTotalFemaleEmployeesCount()"
+                (countRadioButtonSelectionChanged) = "onEmployeeCountRadioButtonChange($event)">
+</employee-count>
 <br/>
-
+ 
 <table>
   <thead>
     <tr>
@@ -19,19 +21,21 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let employee of employees;trackBy:trackByEmpCode;let i = index; let isFirst = first; let isLast = last; let isEven = even; ; let isOdd = odd">
-      <td>{{employee.code | uppercase}}</td>
-      <td>{{employee.name | employeeTitle:employee.gender}}</td>
-      <td>{{employee.gender}}</td>
-      <td>{{employee.annualSalary | currency: 'USD': true: '1.3-3'}}</td>
-      <td>{{employee.dateOfBirth | date: 'fullDate'| uppercase}}</td>
-      <!--<td>{{employee.dateOfBirth | date: 'dd/MM/y'| uppercase}}</td>-->
-      <td>{{i}}</td>
-      <td>{{isFirst}}</td>
-      <td>{{isLast}}</td>
-      <td>{{isEven}}</td>
-      <td>{{isOdd}}</td>
-    </tr>
+    <ng-container *ngFor="let employee of employees;trackBy:trackByEmpCode;let i = index; let isFirst = first; let isLast = last; let isEven = even; ; let isOdd = odd">
+      <tr *ngIf="selectedEmployeeCountRadioButton == 'All' || selectedEmployeeCountRadioButton == employee.gender">
+        <td>{{employee.code | uppercase}}</td>
+        <td>{{employee.name | employeeTitle:employee.gender}}</td>
+        <td>{{employee.gender}}</td>
+        <td>{{employee.annualSalary | currency: 'USD': true: '1.3-3'}}</td>
+        <td>{{employee.dateOfBirth | date: 'fullDate'| uppercase}}</td>
+        <!--<td>{{employee.dateOfBirth | date: 'dd/MM/y'| uppercase}}</td>-->
+        <td>{{i}}</td>
+        <td>{{isFirst}}</td>
+        <td>{{isLast}}</td>
+        <td>{{isEven}}</td>
+        <td>{{isOdd}}</td>
+      </tr>
+    </ng-container>
     <tr *ngIf="!employees || employees.length==0">
       <td colspan="5">
         No employees to display
