Angular Dependency Injection

--- a/src/app/employee/employeeList.component.html
+++ b/src/app/employee/employeeList.component.html
@@ -56,4 +56,9 @@
 <button (click)="getEmployees()">
  Refresh Employees
 </button>
+<br/>
+<div>
+  ColorPreference:
+  <input type="text" [(ngModel)] ="color" [style.background]="color"/>
+</div>
 
