Angular router navigate method

--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -75,3 +75,7 @@
 <div *ngIf="!employee">
   {{statusMessage}}
 </div>
+
+<div style="margin-top:5px">
+  <input class="btn btn-primary" type="button" value="Back to Employees List" (click)="onBackButtonClick()"/>
+</div>
